ensure waybar text is visible

--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -3,6 +3,7 @@
   border-radius: 0;
   font-size: 13px;
   min-height: 0;
+  color: #eeeeee;
 }
 
 #window {
